--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ title: TGR - Gaming news iOS app
     <h2>Introductory video</h2>
 
     <div class='embed-container'>
-        <iframe src='https://player.vimeo.com/video/96035612?title=0&amp;byline=0&amp;portrait=0&amp;color=d9230f&amp;autoplay=1' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        <iframe src='http://www.youtube-nocookie.com/embed/XcyLZiJAPqI?rel=0&autoplay=1&showinfo=0&theme=light' frameborder='0' allowfullscreen></iframe>
+        <iframe src="http://www.youtube-nocookie.com/embed/XcyLZiJAPqI?vq=hd720&autoplay=1&iv_load_policy=3&rel=0&showinfo=0&theme=light&autohide=0" frameborder="0">
+        </iframe>
     </div>
     
     <p style="padding-top:50px;">
