--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: TGR - Blog
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1 style="padding-bottom:50px;">Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.description }}</li>
