setup google analytics

--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,15 @@
 ---
 layout: default
-title: TGR - Blog
+title: Blog
 ---
 
 <div id="home">
-  <h1 style="padding-bottom:50px;">Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.description }}</li>
-    {% endfor %}
-  </ul>
+    <h1>Blog Posts</h1>
+    <ul class="posts">
+        {% for post in site.posts %}
+        <li>
+            <span>{{ post.date | date_to_string }}</span>&raquo;
+            <a href="{{ post.url }}">{{ post.title }}</a>- {{ post.description }}</li>
+        {% endfor %}
+    </ul>
 </div>
