--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,9 @@ title: Blog
         {% for post in site.posts %}
         <li>
             <span>{{ post.date | date_to_string }}</span>&raquo;
-            <a href="{{ post.url }}">{{ post.title }}</a>- {{ post.description }}</li>
+            <a href="{{ post.url }}">{{ post.title }}</a> &nbsp;&#8211;&nbsp; {{ post.description }} &nbsp;&#8211;&nbsp; {% include comments_count.html %}
+            
+        </li>
         {% endfor %}
     </ul>
 </div>
