--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ title: Blog
     <ul class="posts">
         {% for post in site.posts %}
         <li>
-            <span>{{ post.date | date_to_string }}</span>&raquo;
+            <span>{{ post.date | date_to_string }}</span>&nbsp;&raquo;
             <a href="{{ post.url }}">{{ post.title }}</a> &nbsp;&#8211;&nbsp; {{ post.description }} &nbsp;&#8211;&nbsp; 
             {% if site.disqus_short_name and post.comments == true and site.disqus_show_comment_count == true %}
 		    {% include post/comments_link.html %}
