--- a/blog.html
+++ b/blog.html
@@ -17,4 +17,7 @@ title: Blog
         </li>
         {% endfor %}
     </ul>
+    <p style="padding-top:4rem;">
+        <a href="{{ site.url }}/atom.xml">RSS Feed.</a>
+    </p>
 </div>
