--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@ title: Contact
 <div id="home">
      <h1>Contact</h1>
     <p>
+        <a href="https://twitter.com/thegamersreader">
+            Follow TGR on Twitter
+        </a>!
+    </p>
+    <p style="padding-top:2rem;">
         <button type="button" class="btn btn-primary btn-lg" id="contactButton">Write to me</button>
     </p>
     
