update for release of app

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Gaming news iOS app
 
     <div class="jumbotron">
         <h1>Gaming news iOS app</h1>
-        <p>for true, moustachioed, pink haired</span> gamers - Coming Soon!</p>
+        <p style="padding-bottom:1rem;">for true, moustachioed, pink haired gamers!</p>
+            <a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142?l=fr&ls=1&mt=8" ><img src="{{ site.url }}/assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.png" /></a>
     </div>
 
     <h2>Introductory video</h2>
