--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@ title: Blog
     </ul>
     <p style="padding-top:4rem;">
 <!--        <a href="{{ site.url }}/atom.xml">RSS Feed.</a>-->
-        <input type="button" onclick="(function(btn){var z=document.createElement('script');document.subtomeBtn=btn;z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})(this)" value="Subscribe" data-subtome-resource="{{ site.url }}" data-subtome-feeds="{{ site.url }}/atom.xml">
+        <input type="button" onclick="(function(btn){var z=document.createElement('script');document.subtomeBtn=btn;z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})(this)" value="Subscribe to RSS" data-subtome-resource="{{ site.url }}" data-subtome-feeds="{{ site.url }}/atom.xml">
 
 
     </p>
