--- a/index.html
+++ b/index.html
@@ -5,24 +5,53 @@ title: Gaming news iOS app
 <div id="home">
 
     <div class="jumbotron">
-        <h1>Gaming news iOS app</h1>
+        <h1>The Gaming News iOS app</h1>
         <p style="padding-bottom:1rem;">for true, moustachioed, pink haired gamers!</p>
-            <a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142?l=fr&ls=1&mt=8" ><img src="{{ site.url }}/assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.png" /></a>
+        <a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142?l=fr&ls=1&mt=8">
+            <img src="{{ site.url }}/assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.png" />
+        </a>
     </div>
 
     <h2>Introductory video</h2>
 
-    <div class='embed-container'>
-        <iframe src='http://www.youtube-nocookie.com/embed/XcyLZiJAPqI?rel=0&autoplay=1&showinfo=0&theme=light' frameborder='0' allowfullscreen></iframe>
-        <iframe src="http://www.youtube-nocookie.com/embed/XcyLZiJAPqI?vq=hd720&autoplay=1&iv_load_policy=3&rel=0&showinfo=0&theme=light&autohide=0" frameborder="0">
+    <div class='embed-container youtube-container'>
+        <iframe src="http://www.youtube-nocookie.com/embed/XcyLZiJAPqI?vq=hd720&autoplay=1&iv_load_policy=3&rel=0&showinfo=0&theme=light&autohide=0" frameborder="0" allowfullscreen>
         </iframe>
     </div>
-    
-    <p style="padding-top:50px;">
-        <blockquote class="pull-right">
+
+    <div style="padding-top:3rem;">
+        <h2 style="padding-bottom:2rem;">Try it for yourself!</h2>
+
+
+    </div>
+
+    <ul class="nav nav-tabs" style="margin-bottom: 15px;">
+        <li class="active">
+            <a href="#iphoneTab" data-toggle="tab">On iPhone</a>
+        </li>
+        <li class="">
+            <a href="#ipadTab" data-toggle="tab">On iPad</a>
+        </li>
+    </ul>
+    <div id="myTabContent" class="tab-content">
+        <div class="tab-pane fade active in" id="iphoneTab">
+            <div class='embed-container iphone-container'>
+                <iframe src="https://app.io/P0Hb19?orientation=portrait&device=iphone5" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="ipadTab">
+            <div class='embed-container ipad-container'>
+                <iframe src="https://app.io/P0Hb19?orientation=landscape&device=ipadmini" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<p style="padding-top:50px;">
+    <blockquote class="pull-right">
         <p>A once in a lifetime experience!</p>
         <small>Mum</small>
     </blockquote>
-    </p>
-    
+</p>
+
 </div>
