add warning for lag on ipad simulation

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ title: Gaming news iOS app
             </div>
         </div>
         <div class="tab-pane fade" id="ipadTab">
+            <p>Warning: The simulation on iPad can lag and display some visual artifacts! It does not reflect the smoothness of the experience on a real device!</p>
             <div class='embed-container ipad-container'>
                 <iframe src="https://app.io/P0Hb19?orientation=landscape&device=ipadmini" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
             </div>
