--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,15 @@ title: Contact
             Follow TGR on Twitter
         </a>!
     </p>
+    <p>
+        Drop us an email at:
+        <a href="mailto:me@tgr.mobi">
+            me@tgr.mobi
+        </a>
+    </p>
     <p style="padding-top:2rem;">
-        <button type="button" class="btn btn-primary btn-lg" id="contactButton">Write to me</button>
+        Or write to us using this
+        <button type="button" class="btn btn-primary btn-lg" id="contactButton">Button form.</button>
     </p>
     
 </div>
