Test back on github

--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@ title: Contact
     </p>
     <p>
         Drop us an email at:
-        <a href="mailto:me@tgr.mobi">
-            me@tgr.mobi
+        <a href="mailto:contact@tgr.mobi">
+            contact@tgr.mobi
         </a>
     </p>
     <p style="padding-top:2rem;">
