--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Gaming news iOS app
     </div>
 
     <div style="padding-top:3rem;">
-        <h2 style="padding-bottom:2rem;">Moar Images:</h2>
+        <h2 style="padding-bottom:2rem;">Images:</h2>
 
         <div id="links" class="row">
             <div class="col-xs-4 col-md-3">
@@ -29,33 +29,26 @@ title: Gaming news iOS app
                     <img src="{{ site.url }}/assets/img/ipad/0.png" alt="">
                 </a>
             </div>
-
             <div class="col-xs-4 col-md-3">
                 <a href="{{ site.url }}/assets/img/ipad/1.png" title="" class="thumbnail" data-gallery>
                     <img src="{{ site.url }}/assets/img/ipad/1.png" alt="">
                 </a>
             </div>
-
-
             <div class="col-xs-4 col-md-3">
                 <a href="{{ site.url }}/assets/img/ipad/2.png" title="" class="thumbnail" data-gallery>
                     <img src="{{ site.url }}/assets/img/ipad/2.png" alt="">
                 </a>
             </div>
-
             <div class="col-xs-4 col-md-3">
                 <a href="{{ site.url }}/assets/img/ipad/3.png" title="" class="thumbnail" data-gallery>
                     <img src="{{ site.url }}/assets/img/ipad/3.png" alt="">
                 </a>
             </div>
-
-
             <div class="col-xs-4 col-md-3">
                 <a href="{{ site.url }}/assets/img/ipad/4.png" title="" class="thumbnail" data-gallery>
                     <img src="{{ site.url }}/assets/img/ipad/4.png" alt="">
                 </a>
             </div>
-            
             <div class="col-xs-4 col-md-3">
                 <a href="{{ site.url }}/assets/img/iphone/00.jpeg" title="" class="thumbnail" data-gallery>
                     <img src="{{ site.url }}/assets/img/iphone/00.jpeg" alt="">
