--- a/contact.html
+++ b/contact.html
@@ -24,22 +24,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
 <!-- syntax highlighting CSS -->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website//assets/css/syntax.css">
+<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/syntax.css">
 
 <!-- Simple Text Rotator CSS -->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website//assets/css/simpletextrotator.css">
+<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/simpletextrotator.css">
 
 <!-- Custom CSS -->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website//assets/css/main.css">
+<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/main.css">
 
 <!--Custom Fonts-->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website//assets/css/steelfishFont.css">
+<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/steelfishFont.css">
 
 <!--Favicon-->
-<link href="http://bluezen.github.io/TGR-website//assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="http://bluezen.github.io/TGR-website/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 <!-- Bootstrap -->
-<link href="http://bluezen.github.io/TGR-website//assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="http://bluezen.github.io/TGR-website/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -48,7 +48,7 @@
 <![endif]-->
 
 <!--Bootstrap Image Gallery-->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website//assets/css/blueimp-gallery.min.css">
+<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/blueimp-gallery.min.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://bluezen.github.io/TGR-website//">The Gamer's Reader</a>
+      <a class="navbar-brand" href="http://bluezen.github.io/TGR-website/">The Gamer's Reader</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,14 +72,14 @@
 
       <ul class="nav navbar-nav navbar-right">
           <li><a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142">Get it on the App Store</a></li>
-        <li><a href="http://bluezen.github.io/TGR-website//blog.html">Blog</a></li>
+        <li><a href="http://bluezen.github.io/TGR-website/blog.html">Blog</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="http://bluezen.github.io/TGR-website//changelog.html">Release notes</a></li>
+            <li><a href="http://bluezen.github.io/TGR-website/changelog.html">Release notes</a></li>
             <li><a href="http://thegamersreader.uservoice.com">Go to support website</a></li>
             <li class="divider"></li>
-            <li><a href="http://bluezen.github.io/TGR-website//contact.html">Contact us</a></li>
+            <li><a href="http://bluezen.github.io/TGR-website/contact.html">Contact us</a></li>
           </ul>
         </li>
       </ul>
@@ -169,10 +169,10 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://bluezen.github.io/TGR-website//assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="http://bluezen.github.io/TGR-website/assets/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Simple Text Rotator  -->
-<script src="http://bluezen.github.io/TGR-website//assets/js/jquery.simple-text-rotator.min.js"></script>
+<script src="http://bluezen.github.io/TGR-website/assets/js/jquery.simple-text-rotator.min.js"></script>
 <script>
     $(document).ready(function(){
 
@@ -187,7 +187,7 @@
 </script>
 
 <!--Bootstrap Image Gallery-->
-<script src="http://bluezen.github.io/TGR-website//assets/js/blueimp-gallery.min.js"></script>
+<script src="http://bluezen.github.io/TGR-website/assets/js/blueimp-gallery.min.js"></script>
 
 <!-- User Voice -->
 <script>
