--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
 <!-- syntax highlighting CSS -->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/syntax.css">
+<link rel="stylesheet" href="http://thegamersreader.com/assets/css/syntax.css">
 
 <!-- Simple Text Rotator CSS -->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/simpletextrotator.css">
+<link rel="stylesheet" href="http://thegamersreader.com/assets/css/simpletextrotator.css">
 
 <!-- Custom CSS -->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/main.css">
+<link rel="stylesheet" href="http://thegamersreader.com/assets/css/main.css">
 
 <!--Custom Fonts-->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/steelfishFont.css">
+<link rel="stylesheet" href="http://thegamersreader.com/assets/css/steelfishFont.css">
 
 <!--Favicon-->
-<link href="http://bluezen.github.io/TGR-website/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="http://thegamersreader.com/assets/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 <!-- Bootstrap -->
-<link href="http://bluezen.github.io/TGR-website/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="http://thegamersreader.com/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -48,7 +48,7 @@
 <![endif]-->
 
 <!--Bootstrap Image Gallery-->
-<link rel="stylesheet" href="http://bluezen.github.io/TGR-website/assets/css/blueimp-gallery.min.css">
+<link rel="stylesheet" href="http://thegamersreader.com/assets/css/blueimp-gallery.min.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="http://bluezen.github.io/TGR-website/">The Gamer's Reader</a>
+      <a class="navbar-brand" href="http://thegamersreader.com/">The Gamer's Reader</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,14 +72,14 @@
 
       <ul class="nav navbar-nav navbar-right">
           <li><a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142">Get it on the App Store</a></li>
-        <li><a href="http://bluezen.github.io/TGR-website/blog.html">Blog</a></li>
+        <li><a href="http://thegamersreader.com/blog.html">Blog</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="http://bluezen.github.io/TGR-website/changelog.html">Release notes</a></li>
+            <li><a href="http://thegamersreader.com/changelog.html">Release notes</a></li>
             <li><a href="http://thegamersreader.uservoice.com">Go to support website</a></li>
             <li class="divider"></li>
-            <li><a href="http://bluezen.github.io/TGR-website/contact.html">Contact us</a></li>
+            <li><a href="http://thegamersreader.com/contact.html">Contact us</a></li>
           </ul>
         </li>
       </ul>
@@ -93,10 +93,10 @@
 
     <div class="jumbotron">
         <h1>The Gaming News iOS app</h1>
-        <img class="img-responsive" src="http://bluezen.github.io/TGR-website/assets/img/ipad_horizontal.png" />
+        <img class="img-responsive" src="http://thegamersreader.com/assets/img/ipad_horizontal.png" />
         <p style="padding-bottom:1rem;">you will fall in love with. News. Videos. Your selection!</p>
         <a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142?l=fr&ls=1&mt=8">
-            <img src="http://bluezen.github.io/TGR-website/assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.png" />
+            <img src="http://thegamersreader.com/assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.png" />
         </a>
     </div>
     
@@ -112,94 +112,94 @@
 
         <div id="links" class="row">
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/ipad/0.png" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/ipad/0.png" alt="">
+                <a href="http://thegamersreader.com/assets/img/ipad/0.png" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/ipad/0.png" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/ipad/1.png" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/ipad/1.png" alt="">
+                <a href="http://thegamersreader.com/assets/img/ipad/1.png" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/ipad/1.png" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/ipad/2.png" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/ipad/2.png" alt="">
+                <a href="http://thegamersreader.com/assets/img/ipad/2.png" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/ipad/2.png" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/ipad/3.png" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/ipad/3.png" alt="">
+                <a href="http://thegamersreader.com/assets/img/ipad/3.png" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/ipad/3.png" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/ipad/4.png" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/ipad/4.png" alt="">
+                <a href="http://thegamersreader.com/assets/img/ipad/4.png" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/ipad/4.png" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/00.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/00.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/00.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/00.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/09.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/09.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/09.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/09.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/010.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/010.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/010.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/010.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/011.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/011.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/011.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/011.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/012.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/012.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/012.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/012.jpeg" alt="">
                 </a>
             </div>
             
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/013.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/013.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/013.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/013.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/014.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/014.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/014.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/014.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/015.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/015.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/015.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/015.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/017.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/017.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/017.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/017.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/018.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/018.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/018.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/018.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/019.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/019.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/019.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/019.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/020.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/020.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/020.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/020.jpeg" alt="">
                 </a>
             </div>
             <div class="col-xs-4 col-md-3">
-                <a href="http://bluezen.github.io/TGR-website/assets/img/iphone/021.jpeg" title="" class="thumbnail" data-gallery>
-                    <img src="http://bluezen.github.io/TGR-website/assets/img/iphone/021.jpeg" alt="">
+                <a href="http://thegamersreader.com/assets/img/iphone/021.jpeg" title="" class="thumbnail" data-gallery>
+                    <img src="http://thegamersreader.com/assets/img/iphone/021.jpeg" alt="">
                 </a>
             </div>
         </div>
@@ -274,10 +274,10 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://bluezen.github.io/TGR-website/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="http://thegamersreader.com/assets/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Simple Text Rotator  -->
-<script src="http://bluezen.github.io/TGR-website/assets/js/jquery.simple-text-rotator.min.js"></script>
+<script src="http://thegamersreader.com/assets/js/jquery.simple-text-rotator.min.js"></script>
 <script>
     $(document).ready(function(){
 
@@ -292,7 +292,7 @@
 </script>
 
 <!--Bootstrap Image Gallery-->
-<script src="http://bluezen.github.io/TGR-website/assets/js/blueimp-gallery.min.js"></script>
+<script src="http://thegamersreader.com/assets/js/blueimp-gallery.min.js"></script>
 
 <!-- User Voice -->
 <script>
