--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
         <div id="home">
 
     <div class="jumbotron">
-        <h1>The Gaming News iOS app</h1>
+        <h1>One Gaming News App</h1>
+        <p>to read them all!</p>
         <img class="img-responsive" src="http://thegamersreader.com/assets/img/ipad_horizontal.png" />
-        <p style="padding-bottom:1rem;">you will fall in love with. News. Videos. Your selection!</p>
+        <p style="padding-bottom:1rem;">Your selection of video game news and videos from the best web sites together in one app.</p>
         <a href="https://itunes.apple.com/us/app/the-gamers-reader/id859991142?l=fr&ls=1&mt=8">
             <img src="http://thegamersreader.com/assets/img/Download_on_the_App_Store_Badge_US-UK_135x40.png" />
         </a>
